fixed canvas distortion

--- a/style.css
+++ b/style.css
@@ -78,6 +78,12 @@ a {
   z-index: 5;
 }
 
+.hero_bg {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+
 
 @media (min-width: 768px) {
   h1 {
